--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,4 @@
-
+<h1> {{ (heroe.id) ? 'Editar' : 'Nuevo' }} Heroe <small>{{heroe.superhero}}</small></h1>
 
 <div fxLayout="row"
      fxLayoutGap="40px"
@@ -69,7 +69,7 @@
                     color="primary"
                     (click)="guardar()">
                 <mat-icon>edit</mat-icon>
-                {{ ( heroe.id )? 'Actualizar' : 'Crear' }}
+                {{ ( heroe.id ) ? 'Actualizar' : 'Crear' }}
             </button>
         
             <span class="spacer"></span>
