--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -38,9 +38,12 @@
             <mat-icon>menu</mat-icon>
         </button>
         <span class="spacer"></span>
-        <button mat-button>
-            Logout
-        </button>
+
+        <span>{{auth.usuario}}</span>
+
+        <button mat-button
+        (click)="logout()">
+        Logout</button>
     </mat-toolbar>
 
     <div class="container">
